--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 NODE_ENV=development
 PORT=5000
 MONGO_URI=mongodb+srv://trader070907_db_user:ZS5zOxQWildFIEDz@cluster0.tyqx2o7.mongodb.net/?appName=Cluster0
-CLIENT_URL=http://localhost:5173
+CLIENT_URL=https://saa-s-growth-78yu.vercel.app
 JWT_SECRET=supersecretkey
